@@ -1,3 +1,7 @@
+1995-10-29  Thomas E. Dickey  <dickey@clark.net>
+
+	* src/ftree.c: added guard for getwd failure in 'do_find()'
+
 1995-10-21  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/dedshow.c:
